# who_is_on

./: .gitignore  CMakeLists.txt  helpers.cpp  helpers.h  who_is_on.cpp  wmi_query.cpp  wmi_query.h
